Adding sepa reconciliation tests
