# models/sepa_reconciliation_association.go
@@ -1,0 +1,207 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// SepaReconciliationAssociation sepa reconciliation association
+// swagger:model SepaReconciliationAssociation
+type SepaReconciliationAssociation struct {
+
+	// attributes
+	Attributes *SepaReconciliationAssociationAttributes `json:"attributes,omitempty"`
+
+	// created on
+	// Read Only: true
+	// Format: date-time
+	CreatedOn strfmt.DateTime `json:"created_on,omitempty"`
+
+	// id
+	// Format: uuid
+	ID strfmt.UUID `json:"id,omitempty"`
+
+	// modified on
+	// Read Only: true
+	// Format: date-time
+	ModifiedOn strfmt.DateTime `json:"modified_on,omitempty"`
+
+	// organisation id
+	// Format: uuid
+	OrganisationID strfmt.UUID `json:"organisation_id,omitempty"`
+
+	// relationships
+	Relationships *SepaReconciliationAssociationRelationships `json:"relationships,omitempty"`
+
+	// type
+	Type string `json:"type,omitempty"`
+
+	// version
+	// Minimum: 0
+	Version *int64 `json:"version,omitempty"`
+}
+
+// Validate validates this sepa reconciliation association
+func (m *SepaReconciliationAssociation) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAttributes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCreatedOn(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateModifiedOn(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOrganisationID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRelationships(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateVersion(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateAttributes(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Attributes) { // not required
+		return nil
+	}
+
+	if m.Attributes != nil {
+		if err := m.Attributes.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("attributes")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateCreatedOn(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.CreatedOn) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("created_on", "body", "date-time", m.CreatedOn.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateID(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("id", "body", "uuid", m.ID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateModifiedOn(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ModifiedOn) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("modified_on", "body", "date-time", m.ModifiedOn.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateOrganisationID(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.OrganisationID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("organisation_id", "body", "uuid", m.OrganisationID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateRelationships(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Relationships) { // not required
+		return nil
+	}
+
+	if m.Relationships != nil {
+		if err := m.Relationships.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("relationships")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateVersion(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Version) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("version", "body", int64(*m.Version), 0, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SepaReconciliationAssociation) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SepaReconciliationAssociation) UnmarshalBinary(b []byte) error {
+	var res SepaReconciliationAssociation
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
