# models/sepa_reconciliation_association_relationships.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// SepaReconciliationAssociationRelationships sepa reconciliation association relationships
+// swagger:model SepaReconciliationAssociationRelationships
+type SepaReconciliationAssociationRelationships struct {
+
+	// ID of the sponsor related to this account
+	Sponsor *RelationshipLinks `json:"sponsor,omitempty"`
+}
+
+// Validate validates this sepa reconciliation association relationships
+func (m *SepaReconciliationAssociationRelationships) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateSponsor(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *SepaReconciliationAssociationRelationships) validateSponsor(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Sponsor) { // not required
+		return nil
+	}
+
+	if m.Sponsor != nil {
+		if err := m.Sponsor.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("sponsor")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SepaReconciliationAssociationRelationships) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SepaReconciliationAssociationRelationships) UnmarshalBinary(b []byte) error {
+	var res SepaReconciliationAssociationRelationships
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
